<?xml version="1.0" encoding="utf-8"?>
<!-- Ids iguais aos destinos do nav_graph: o NavigationUI navega pelo id do item. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/discoverFragment"
        android:icon="@drawable/nav_discover"
        android:title="@string/nav_discover" />
    <item
        android:id="@+id/albumFragment"
        android:icon="@drawable/nav_album"
        android:title="@string/nav_album" />
    <item
        android:id="@+id/gamesFragment"
        android:icon="@drawable/nav_games"
        android:title="@string/nav_games" />
    <item
        android:id="@+id/battleSelectFragment"
        android:icon="@drawable/nav_battle"
        android:title="@string/nav_battle" />
</menu>
