<?xml version="1.0" encoding="utf-8"?>
<!-- Sem SVG dedicado: segue a Home (título + ação) e a linha de números do Detalhe. -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/space_lg"
            android:paddingTop="@dimen/space_lg"
            android:paddingBottom="@dimen/space_md">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="@dimen/touch_target"
                    android:layout_height="@dimen/touch_target"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/content_description_back"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    style="@style/Widget.Marvel.ScreenTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/profile_title" />

                <ImageButton
                    android:id="@+id/shareButton"
                    android:layout_width="@dimen/touch_target"
                    android:layout_height="@dimen/touch_target"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/profile_card_share"
                    android:src="@drawable/ic_send" />

                <ImageButton
                    android:id="@+id/logoutButton"
                    android:layout_width="@dimen/touch_target"
                    android:layout_height="@dimen/touch_target"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/home_logout_action"
                    android:src="@drawable/ic_logout" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_md"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:background="@drawable/bg_circle"
                    android:clipToOutline="true"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_md"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name"
                        style="@style/Widget.Marvel.H2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        tools:text="Peter Parker" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/text_secondary"
                        tools:text="peter@dailybugle.com" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_lg"
                android:background="@drawable/bg_card"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/space_md">

                <LinearLayout style="@style/Widget.Marvel.Stat">

                    <TextView
                        android:id="@+id/readValue"
                        style="@style/Widget.Marvel.StatValue"
                        tools:text="12" />

                    <TextView
                        style="@style/Widget.Marvel.StatLabel"
                        android:text="@string/profile_stat_read" />
                </LinearLayout>

                <LinearLayout style="@style/Widget.Marvel.Stat">

                    <TextView
                        android:id="@+id/ratingValue"
                        style="@style/Widget.Marvel.StatValue"
                        tools:text="4,2" />

                    <TextView
                        style="@style/Widget.Marvel.StatLabel"
                        android:text="@string/profile_stat_rating" />
                </LinearLayout>

                <LinearLayout style="@style/Widget.Marvel.Stat">

                    <TextView
                        android:id="@+id/battlesValue"
                        style="@style/Widget.Marvel.StatValue"
                        tools:text="3V · 1D" />

                    <TextView
                        style="@style/Widget.Marvel.StatLabel"
                        android:text="@string/profile_stat_battles" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/Widget.Marvel.CaptionBox"
                android:layout_marginTop="@dimen/space_lg"
                android:text="@string/profile_achievements" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/achievements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4" />

            <TextView
                style="@style/Widget.Marvel.CaptionBox"
                android:layout_marginTop="@dimen/space_lg"
                android:text="@string/profile_favorites" />

            <!-- Herói e série preferidos: toque escolhe (busca de personagem / de série). -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/heroCard"
                    style="@style/Widget.Marvel.FavoriteCard"
                    android:layout_marginEnd="@dimen/space_xs">

                    <ImageView
                        android:id="@+id/heroImage"
                        style="@style/Widget.Marvel.FavoriteImage" />

                    <TextView
                        style="@style/Widget.Marvel.StatLabel"
                        android:text="@string/profile_favorite_hero" />

                    <TextView
                        android:id="@+id/heroName"
                        style="@style/Widget.Marvel.FavoriteName"
                        tools:text="Spider-Man" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/seriesCard"
                    style="@style/Widget.Marvel.FavoriteCard"
                    android:layout_marginStart="@dimen/space_xs">

                    <ImageView
                        android:id="@+id/seriesImage"
                        style="@style/Widget.Marvel.FavoriteImage" />

                    <TextView
                        style="@style/Widget.Marvel.StatLabel"
                        android:text="@string/profile_favorite_series" />

                    <TextView
                        android:id="@+id/seriesName"
                        style="@style/Widget.Marvel.FavoriteName"
                        tools:text="The Amazing Spider-Man" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/genresGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                app:chipSpacingHorizontal="@dimen/space_sm" />

            <TextView
                style="@style/Widget.Marvel.CaptionBox"
                android:layout_marginTop="@dimen/space_lg"
                android:text="@string/profile_shelf" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/filterGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                app:chipSpacingHorizontal="@dimen/space_sm"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/filterRead"
                    style="@style/Widget.Marvel.FilterChip"
                    android:checked="true"
                    android:text="@string/reading_status_read" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filterReading"
                    style="@style/Widget.Marvel.FilterChip"
                    android:text="@string/reading_status_reading" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filterWant"
                    style="@style/Widget.Marvel.FilterChip"
                    android:text="@string/reading_status_want" />
            </com.google.android.material.chip.ChipGroup>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm">

                <!-- Dentro do NestedScrollView: a estante é curta, então não precisa reciclar. -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/shelf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3" />

                <TextView
                    android:id="@+id/emptyText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/space_lg"
                    android:text="@string/profile_shelf_empty"
                    android:textColor="@color/text_secondary"
                    android:visibility="gone" />
            </FrameLayout>

            <!-- Estante de filmes (avaliados no detalhe do filme), separada da de HQs. -->
            <TextView
                android:id="@+id/moviesTitle"
                style="@style/Widget.Marvel.CaptionBox"
                android:layout_marginTop="@dimen/space_lg"
                android:text="@string/profile_movies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/moviesShelf"
                style="@style/Widget.Marvel.Carousel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/moviesEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/space_md"
                android:text="@string/profile_movies_empty"
                android:textColor="@color/text_secondary"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addButton"
        style="@style/Widget.Marvel.ComicButton"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/space_lg"
        android:layout_marginBottom="@dimen/space_md"
        android:text="@string/profile_add_comic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
